# AutoFPL

./: .gitignore  README.md  main.py  pyproject.toml  test_fpl_auth.py
.github/workflows/: autofpl-cron.yml
src/autofpl/: __init__.py  decisions.py  executor.py  fpl_client.py  llm.py  main.py  notification.py  scoring.py
